--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
@@ -61,7 +54,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-responsive" src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2FWebp.net-resizeimage%20(3).png?v=1566940164982" alt="">
                   <div class="intro-text">
                         <span class="name">Rebecca Butler</span>
                         <hr class="star-light">
@@ -186,7 +178,10 @@
                         <h3>Contact</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="mailto:rebutler@edu.uwaterloo.ca" class="btn-social btn-outline"><i class="fa fa-fw fa-comments"></i></a>
+                                <a href="mailto:rebutler@edu.uwaterloo.ca" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
+                            </li>
+                            <li>
+                                <a href="tel:647-832-6034" class="btn-social btn-outline"><i class="fa fa-fw fa-phone"></i></a>
                             </li>
                             <li>
                                 <a href="https://github.com/rebecca-butler" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
@@ -235,17 +230,23 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Magneto</h2>
+                            <h2>Waterloo Robotic Rollator</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.hyperdev.com/us-east-1%3A0764790b-7e21-4437-ae79-1567df87f632%2Fcabin.png" class="img-responsive img-centered" alt="">
-                            <p>Magneto is a line-following robot.</p>
+                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69445809_449823795627483_6030977439067275264_n.jpg?v=1566867410439" class="img-responsive img-centered" alt="">
+                            <p>This device is a walker intended for use by the elderly or those rehabilitating from an injury. 
+                               It uses four Arduino boards connected by Bluetooth to implement various sensors, including an accelerometer, an IMU, a time of flight sensor, and force sensors in the handles.
+                               When the user moves with the walker, data is recorded about their current position using a Simulink model. 
+                               The goal is to predict how the user will move next, and if they deviate from the desired path, the walker can steer them in the right direction. <br> <br>
+                               I worked on this project with the Neural and Rehabilitation Engineering lab team under Professor James Tung, where I was a research assistant.<br> <br>
+                               More information on the project can be found here: <a href="https://uwspace.uwaterloo.ca/handle/10012/13912?show=full">Waterloo Robotic Rollator</a>
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>May - Aug 2019
+                                    <strong>Sept - Dec 2018
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong>MTE 220, Sensors and Instrumentation
+                                <li>Technologies:
+                                    <strong>Arduino boards, MATLAB, Simulink
                                     </strong>
                                 </li>
                             </ul>
@@ -269,21 +270,25 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Waterloo Robotic Rollator</h2>
+                            <h2>Magneto</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69445809_449823795627483_6030977439067275264_n.jpg?v=1566867410439" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <video width="700px" controls muted>
+                               <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2FVID_20190724_162254.mp4?v=1567021599265" type="video/mp4">
+                            </video>
+                            <p><br>Magneto is a robot built to navigate a path along a black line while detecting the polarity of hidden magnets.
+                               When the robot detects a strong magnetic field, it stops for 7 seconds. 
+                               If the magnet has north polarity, the LED blinks; if south, the LED is solid.
+                               When the time has passed, the robot continues to follow the path until it reaches the end of the course or detects another magnet. <br><br>
+                               I programmed the robot in C and performed all surface-mount soldering on the PCB. 
+                               I calculated the necessary resistor values for several circuits, including optical encoders and a hall-effect sensor, before soldering them on.
+                            </p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>May - July 2019
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong> PCB design, surface-mount soldering, C programming
                                     </strong>
                                 </li>
                             </ul>
