--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2FWebp.net-resizeimage%20(2).jpg?v=1566933941577" class="img-responsive" alt="">
+                        <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69325534_705713326586717_5765167380611203072_n.jpg?v=1567026371502" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -246,7 +246,7 @@
                                     </strong>
                                 </li>
                                 <li>Technologies:
-                                    <strong>Arduino boards, MATLAB, Simulink
+                                    <strong>Arduino Mega and Uno boards, MATLAB, Simulink, sensors
                                     </strong>
                                 </li>
                             </ul>
@@ -312,21 +312,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Pothole Finder</h2>
                             <hr class="star-primary">
                             <img src="https://cdn.hyperdev.com/us-east-1%3A0764790b-7e21-4437-ae79-1567df87f632%2Fcircus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>(coming soon)</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>Feb 2019
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>Arduino Uno, GPS, accelerometer, Python, MySQL
                                     </strong>
                                 </li>
                             </ul>
@@ -350,21 +346,20 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Machining and Fabrication</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.hyperdev.com/us-east-1%3A0764790b-7e21-4437-ae79-1567df87f632%2Fgame.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Ftictac%20resized.jpg?v=1566932722685" width="462px">
+                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69762521_2452875624943254_4312511013338480640_n.jpg?v=1567026883926" width="250px">
+                            <p>Pictured: machined tic-tac-toe board (left), 3D-printed phone stand (right) <br> <br>
+                               (description coming soon)
+                            </p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>Sept - Dec 2017
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>SolidWorks, AutoCAD, lathe, mill, 3D printer
                                     </strong>
                                 </li>
                             </ul>
@@ -388,21 +383,19 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Piano Bot</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.hyperdev.com/us-east-1%3A0764790b-7e21-4437-ae79-1567df87f632%2Fsafe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <video width="300px" controls>
+                               <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fvideo-1567026061.mp4?v=1567028648871" type="video/mp4">
+                            </video>
+                            <p><br>(description coming soon)</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>Jan - Apr 2018
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>LEGO EV3 robot brick, 3D printer, laser cutter, ultrasonic and colour sensors, C programming
                                     </strong>
                                 </li>
                             </ul>
@@ -426,21 +419,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Embedded Minesweeper</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.hyperdev.com/us-east-1%3A0764790b-7e21-4437-ae79-1567df87f632%2Fsafe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fkeil.jpg?v=1566938786995" class="img-responsive img-centered" alt="">
+                            <p>(description coming soon)</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>May - Aug 2019
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>Keil development board with ARM Cortex M3, C programming, joystick and push-button input
                                     </strong>
                                 </li>
                             </ul>
