--- a/index.html
+++ b/index.html
@@ -314,8 +314,17 @@
                         <div class="modal-body">
                             <h2>Pothole Finder</h2>
                             <hr class="star-primary">
-                            <img src="https://cdn.hyperdev.com/us-east-1%3A0764790b-7e21-4437-ae79-1567df87f632%2Fcircus.png" class="img-responsive img-centered" alt="">
-                            <p>(coming soon)</p>
+                            <video width="700px" controls>
+                               <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fvideo-1550421287.mp4?v=1567031757669" type="video/mp4">
+                            </video>
+                            <p><br> The Pothole Finder is a device that can be attached to one's car in order to identify the locations of potholes in the city.
+                               It uses an Arduino Uno with an accelerometer to detect sudden changes in the downward and upward acceleration of a car, indicating that it has hit a pothole.
+                               When potholes are detected, the GPS sensor records the coordinates and sends them to an SQL database. 
+                               A Python script then takes this data and plots the pothole locations on a map using the Google Maps Plotter API.
+                               <br><br>
+                               I completed this project during the Make UofT Hackathon in a group of 3. My role was to write the Python script to collect data from the SQL database.
+                               
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>Feb 2019
@@ -351,15 +360,20 @@
                             <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Ftictac%20resized.jpg?v=1566932722685" width="462px">
                             <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69762521_2452875624943254_4312511013338480640_n.jpg?v=1567026883926" width="250px">
                             <p>Pictured: machined tic-tac-toe board (left), 3D-printed phone stand (right) <br> <br>
-                               (description coming soon)
+                               I have completed several projects in the machine shop. 
+                               Pictured on the left is an aluminum tic-tac-toe board, which I made using a mill to cut out the steps and a drill press for a the holes.
+                               I machined the aluminum and brass pegs for the tic-tac-toe board using a lathe.
+                               All of the components were designed in SolidWorks.
+                               <br><br>
+                               The phone stand, pictured on the right, was also designed in SolidWorks and printed using a 3D printer.
                             </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>Sept - Dec 2017
                                     </strong>
                                 </li>
-                                <li>Technologies:
-                                    <strong>SolidWorks, AutoCAD, lathe, mill, 3D printer
+                                <li>Tools:
+                                    <strong>SolidWorks, lathe, mill, drill press, 3D printer
                                     </strong>
                                 </li>
                             </ul>
@@ -388,14 +402,22 @@
                             <video width="300px" controls>
                                <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fvideo-1567026061.mp4?v=1567028648871" type="video/mp4">
                             </video>
-                            <p><br>(description coming soon)</p>
+                            <p><br>The Piano Bot was designed as a tool to allow children to experiment with composing music.
+                               The roobot runs along a track of coloured squares, each of which represents a music note.
+                               After reading each of the notes, the stylus swivels to play the correct notes of the song.
+                               <br><br>
+                               A LEGO EV3 robot was used as the base model, with additional 3D printed and laser cut parts added. 
+                               I designed these parts using AutoCAD and SolidWorks. 
+                               The robot was programmed in C. 
+                               A colour sensor was used to read the notes, and an ultrasonic sensor detected if a hand was placed in front of the robot to indicate when it should stop.
+                            </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>Jan - Apr 2018
                                     </strong>
                                 </li>
                                 <li>Technologies:
-                                    <strong>LEGO EV3 robot brick, 3D printer, laser cutter, ultrasonic and colour sensors, C programming
+                                    <strong>LEGO EV3 robot brick, 3D printer, laser cutter, ultrasonic and colour sensors, C programming, AutoCAD, SolidWorks
                                     </strong>
                                 </li>
                             </ul>
@@ -422,7 +444,12 @@
                             <h2>Embedded Minesweeper</h2>
                             <hr class="star-primary">
                             <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fkeil.jpg?v=1566938786995" class="img-responsive img-centered" alt="">
-                            <p>(description coming soon)</p>
+                            <p>I developed a Minesweeper game in C that runs on a Keil development board. 
+                               The game randomly distributes mines on a 9x9 grid and allows users to place flags or dig up mines.
+                               The player selects squares on the grid using a joystick, and uses one of two pushbuttons to place flags or dig.
+                               <br><br>
+                               (Photos coming soon)
+                          </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>May - Aug 2019
