--- a/index.html
+++ b/index.html
@@ -150,13 +150,12 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>I'm a mechatronics engineering student with experience in a variety of industries, ranging from aerospace robotics to financial tech.
-                      In addition to my strong programming skills and technical experience, I also bring dedication and passion to all my projects.
+                      I'm currently seeking a summer 2020 co-op position focused on robotics, embedded systems, or computer vision.
                       </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>In my spare time, I love reading mystery novels, crocheting, and playing video games.
-                      Currently, I'm working as a software/robotics developer at Mission Control Space Services.
-                      For my next co-op in Summer 2020, I hope to work with embedded systems.
+                    <p>In addition to my strong programming skills and technical experience, I also bring dedication and passion to all my projects.
+                      In my spare time, I love reading mystery novels, crocheting, and playing video games.
                       </p>
                 </div>
             </div>
@@ -194,7 +193,7 @@
                     <div class="footer-col col-md-4">
                         <h3>My Resume</h3>
                         <p>
-                          To learn more about me, <br> view my <a href="https://drive.google.com/open?id=1BXU9skBo-sftnzSDb8eB7FcSeB2vSHmV">resume</a></p>
+                          If you think I might be <br> a good fit for your company, please <br> contact me to see my resume.</p>
                     </div>
                 </div>
             </div>
