--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                             <h2>Waterloo Robotic Rollator</h2>
                             <hr class="star-primary">
                             <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69445809_449823795627483_6030977439067275264_n.jpg?v=1566867410439" class="img-responsive img-centered" alt="">
-                            <p>This device is a walker intended for use by the elderly or those rehabilitating from an injury. 
-                               It uses four Arduino boards connected by Bluetooth to implement various sensors, including an accelerometer, IMU, and force sensors.
+                            <p>This walker uses four Arduino boards to implement various sensors, including an accelerometer, IMU, and force sensors.
                                When the user moves with the walker, data is recorded about their current position using a Simulink model. 
                                The goal is to predict how the user will move next, and if they deviate from the desired path, the walker can steer them in the right direction. <br> <br>
-                               I worked on this project with the Neural and Rehabilitation Engineering lab team under Professor James Tung, where I was a research assistant.<br> <br>
+                               I worked on this project with the Neural and Rehabilitation Engineering lab team under Professor James Tung, where I was a research assistant.
+                               I contributed to the Arduino programming and sensor interfacing. <br> <br>
                                More information on the project can be found here: <a href="https://uwspace.uwaterloo.ca/handle/10012/13912?show=full">Waterloo Robotic Rollator</a>
                             </p>
                             <ul class="list-inline item-details">
