--- a/index.html
+++ b/index.html
@@ -313,8 +313,7 @@
                             <video width="700px" controls>
                                <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fvideo-1550421287.mp4?v=1567031757669" type="video/mp4">
                             </video>
-                            <p><br> The Pothole Finder is a device that can be attached to one's car in order to identify the locations of potholes in the city.
-                               It uses an Arduino Uno with an accelerometer to detect sudden changes in the downward/upward acceleration of a car, indicating that it has hit a pothole.
+                            <p><br> The Pothole Finder uses an Arduino board with an accelerometer to detect sudden changes in the downward/upward acceleration of a car, indicating that it has hit a pothole.
                                When potholes are detected, the GPS sensor records the coordinates and sends them to an SQL database. 
                                A Python script then uses this data to plot locations on a map using the Google Maps Plotter API.
                                <br><br>
@@ -357,9 +356,8 @@
                             <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69762521_2452875624943254_4312511013338480640_n.jpg?v=1567026883926" width="250px">
                             <p>
                                I have completed several projects in the machine shop. 
-                               Pictured on the left is an aluminum tic-tac-toe board made using a mill and drill press.
-                               I machined the aluminum and brass pegs for the on board using a lathe.
-                               All of the components were designed in SolidWorks.
+                               Pictured on the left is an aluminum tic-tac-toe board I designed in SolidWorks. 
+                               I machined the aluminum and brass pegs using a lathe, and the base using a mill and drill press.
                                <br><br>
                                The phone stand, pictured on the right, was also designed in SolidWorks and prototyped using a 3D printer.
                             </p>
@@ -403,7 +401,6 @@
                                After reading each of the notes, the stylus swivels to play the correct notes of the song.
                                <br><br>
                                A LEGO EV3 robot was used as the base model, with additional 3D printed and laser cut parts added. 
-                               I designed these parts using AutoCAD and SolidWorks. 
                                The robot was programmed in C. 
                                A colour sensor was used to read the notes, and an ultrasonic sensor detected if a hand was placed in front of the robot to indicate when it should stop.
                             </p>
@@ -413,7 +410,7 @@
                                     </strong>
                                 </li>
                                 <li>Technologies:
-                                    <strong>LEGO EV3, 3D printer, laser cutter, sensors, C programming, AutoCAD, SolidWorks
+                                    <strong>LEGO EV3, 3D printer, laser cutter, sensors, C programming
                                     </strong>
                                 </li>
                             </ul>
